# JonasKruckenberg

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md  Trunk.toml  astro.config.mjs  index.html  netlify.toml  package.json  performance-budget.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
old/: main.rs
plugins/cache-assets/: index.js  manifest.yml
public/: robots.txt
public/katex/: katex.min.css
src/: App.vue  app.rs  config.ts  index.scss  main.rs  main.scss  main.ts  router.ts  routes.ts  shims.d.ts  typography.scss  vue-app-env.d.ts
src/assets/: code-theme-dark.scss  master.scss  variables.scss
src/assets/styles/: code-theme-dark.scss  master.scss  typography.scss  variables.scss  webjam-dark.scss
src/cards/: brand.vue  kolguyev.vue  nav.vue
src/components/: BaseHead.astro  Discussion.svelte  Footer.astro  Header.astro  NewsletterSignup.astro  blog.vue  brand.vue  card.vue  footer.vue  nav.vue  project-kolguyev.vue  project.vue  template.vue
src/layouts/: BaseLayout.astro  BlogPost.astro
src/lib/: dates.ts
src/pages/: blog.astro  blog.vue  home.rs  home.vue  index.astro  index.vue  mod.rs  newsletter-success.astro  not_found.rs  reactivity.rs  rss.xml.ts  ui.vue
src/pages/blog/: cool-crates.md  hello-world.md  idiomatic-crates.md  latex.md  simple.md  test.md
src/pages/social-image/: [...path].png.ts  [title]-[description].png.ts
src/styles/: _variables.scss  global.css  global.scss  markdown.scss
src/views/: home.vue  test.md
website/: code-theme.json  tsconfig.json
website/src/: config.ts
website/src/lib/: reading-time.ts
(+10 files in other folders)
