[package]
name = "jonaskruckenberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.1", features = ["yew_integration"] }
yew = "0.19.3"
yew-router = "0.16.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true