[package]
edition = "2021"
name = "jonaskruckenberg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.17", features = ["release_max_level_off"]}
wasm-logger = "0.2.0"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "abd556cbc02047042dad2ebd04405e455a9b11b2", features = ["hydrate"] }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore", rev = "abd556cbc02047042dad2ebd04405e455a9b11b2" }

[features]
ssg = ["sycamore/ssr"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'